# krishifarms-backend

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  migration_utils.py  pyproject.toml
.cursor/rules/: krishifarms-context.mdc  maintain-agent-docs.mdc
.github/: DEPLOY_CONFIG.md
.github/workflows/: ci.yml  deploy.yml  validate.yml
alembic/versions/: 202506210001_initial_platform_schema.py  202506210002_extensions_and_platform_enhancements.py  202506210003_master_data_extensions.py  202506210004_farmers.py  202506210005_workers.py  202506210006_farms.py  202506210007_documents_enhancements.py  202506210008_procurements_and_payments.py  202506210009_work_orders_and_attendance.py  202506210010_assets_and_vehicle_trips.py  202506210011_rentals.py  202506210012_financial_core.py  202506210013_audit_and_sync_enhancements.py  202506210014_ai_support_tables.py  202506210015_seed_permissions_and_roles.py  README.md
app/: main.py  models.py
app/core/: config.py  database.py  dependencies.py  exceptions.py  security.py
app/shared/: permissions.py
deploy/: README.md
deploy/env/: application.env.example
deploy/scripts/: ec2-bootstrap.sh  remote-deploy.sh  ssm-kickoff-deploy.sh  sync-env-from-ssm.sh
docs/: AGENT_GUIDE.md  ARCHITECTURE.md  CHANGELOG.md
docs/api/: API_CONTRACT.md  (+2 more)
frontend/: .env.example  .env.local.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
infra/: docker-compose.prod.yml  docker-compose.yml
scripts/: seed.py  smoke-test-api.sh
tests/: test_auth_rbac.py
(+141 files in other folders)
